--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <title>9.c Első weboldal</title>
 </head>
 <body>
+  <a href="https://github.com/Lacii20/harmadikk/blob/main/Fotor.jpg" target="blank>kollazs</a>
+    
 
 <h1>Rácz László</h1>
 <p>9c</p>
+    <hr style="height: 25pt;width 100;color=blue">
 
 </body>
 </html>
