--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <title>9.c Első weboldal</title>
 </head>
 <body>
-  <a href="https://github.com/Lacii20/harmadikk/blob/main/Fotor.jpg" target="blank>kollazs</a>
+
+  <a href="https://github.com/Lacii20/harmadikk/blob/main/Fotor.jpg" target="_blank">Kollázs</a>
     
 
 <h1>Rácz László</h1>
 <p>9c</p>
-    
+  <hr style="height: 25px; width: 20%; color: red;">
+  <hr style="height: 25px; width: 20%; color: white;">
+  <hr style="height: 25px; width: 20%; color: green;">
 
 </body>
 </html>
